--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Assets/style.css">
-    <title>Day Planner</title>
+    <title>Work Day Planner</title>
 </head>
 <body>
 <div class="jumbotron jumbotron-fluid head">
-        <h1 class="display-4 text-center">Day Planner</h1>
-        <p class="lead text-center">A simple calendar app for scheduling your work day</p>
+        <h1 class="display-4 text-center">Work Day Planner</h1>
+        <p class="lead text-center">A simple app to help you with your workday</p>
         <button class="btn btn-warning" style="margin-bottom:1em" id="clearBtn">Clear</button>
     </div>
     <div class="container main">
